# liath

./: .gitignore  FEATURES.md  README.md  pyproject.toml
liath/: cli.py  database.py  server.py  test_database.py
liath/storage/: leveldb_storage.py
website/: index.html
whitematterpy/: cli.py  database.py  plugin_base.py  server.py  setup_luarocks.sh  test_database.py
whitematterpy/data/auth.db/: LOG  LOG.old
whitematterpy/plugins/: backup_restore_plugin.py  db_plugin.py  embed_plugin.py  file_plugin.py  llm_plugin.py  monitoring_logging_plugin.py  query_cache_plugin.py  vdb_plugin.py
whitematterpy/storage/: rocksdb_storage.py
