[tool.poetry]
name = "whitematterpy"
version = "0.1.0"
description = ""
authors = ["Dipankar Sarkar <me@dipankar.name>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.scripts]
server = 'whitematterpy.server:run_server'
cli = 'whitematterpy.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"