[tool.poetry]
name = "whitematterpy"
version = "0.1.0"
description = ""
authors = ["Dipankar Sarkar <me@dipankar.name>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyyaml = "^6.0.1"
llama-cpp-python = "^0.2.85"
openai = "^1.40.0"
pandas = "^2.2.2"
fastembed = "^0.3.4"
psutil = "^6.0.0"
usearch = "^2.13.0"


[tool.poetry.scripts]
server = 'whitematterpy.server:run_server'
cli = 'whitematterpy.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
